# expense-sharing

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
docs/: api_docs.md  expense_postman_collections.json  expense_share.csv
expense_share/: asgi.py  settings.py  urls.py  wsgi.py
expenses/: admin.py  models.py  serializers.py  services.py  utils.py  views.py
expenses/migrations/: 0001_initial.py  0002_alter_expense_total_amount.py
users/: admin.py  managers.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
