[tool.poetry]
name = "expense-share"
version = "0.1.0"
description = "Daily expense sharing API"
authors = ["Rohit Kumar <kumar1rohit@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.15.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
